UIP-3672: Fixed issue where single NodeGroup cluster would be left-aligned

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -782,7 +782,6 @@
 .icon-pf-authentication-integration {
   &:before {
     content: $icon-pf-authentication-integration-path1;
-    color: rgb(0, 0, 0);
   }
 
   &:after {
@@ -794,7 +793,6 @@
 .icon-pf-authentication-oauth {
   &:before {
     content: $icon-pf-authentication-oauth-path1;
-    color: rgb(0, 0, 0);
   }
 
   &:after {
